--- a/vacancy.html
+++ b/vacancy.html
@@ -1,128 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CV-World</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="/css/media.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CV-World</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="/css/style.css" />
-  <link rel="stylesheet" href="/css/media.css">
-</head>
+  <body>
+    <!-- Header -->
+    <!-- Navbar -->
 
-<body>
-  <!-- Header -->
-  <!-- Navbar -->
-
-  <div class="container-sm">
-    <nav class="navbar navbar-expand-lg navbar">
-      <a class="navbar-brand logo" href="#"><img src="/images/logo.webp" alt="" /></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item nav-item">
-            <a class="nav-link" href="index.html">Əsas</a>
-          </li>
-          <li class="nav-item nav-item">
-            <a class="nav-link" href="catalog.html">Kataloq</a>
-          </li>
-          <li class="nav-item nav-item">
-            <a class="nav-link" href="vacancy.html">Vakansiyalar</a>
-          </li>
-          <li class="nav-item nav-item">
-            <a class="nav-link" href="share-vacancy.html">Vakansiya Paylaş</a>
-          </li>
-          <li class="nav-item nav-item">
-            <a class="nav-link" href="contact.html">Əlaqə</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </div>
-  <!-- Navbar End-->
-  <!-- Header End -->
-  <!-- Main -->
-  <main>
     <div class="container-sm">
-      <div class="container">
-        <div class="title">
-          <h1 class="text-primary text-center">Vakansiyalar 2023</h1>
+      <nav class="navbar navbar-expand-lg navbar">
+        <a class="navbar-brand logo" href="#"
+          ><img src="/images/logo.webp" alt=""
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item nav-item">
+              <a class="nav-link" href="index.html">Əsas</a>
+            </li>
+            <li class="nav-item nav-item">
+              <a class="nav-link" href="catalog.html">Kataloq</a>
+            </li>
+            <li class="nav-item nav-item">
+              <a class="nav-link" href="vacancy.html">Vakansiyalar</a>
+            </li>
+            <li class="nav-item nav-item">
+              <a class="nav-link" href="share-vacancy.html">Vakansiya Paylaş</a>
+            </li>
+            <li class="nav-item nav-item">
+              <a class="nav-link" href="contact.html">Əlaqə</a>
+            </li>
+          </ul>
         </div>
-        <div class="vacancy-wrapper job-list-row row">
-          <div class="job-list">
-            <div class="">
-              <img src="" alt="">
+      </nav>
+    </div>
+    <!-- Navbar End-->
+    <!-- Header End -->
+    <!-- Main -->
+    <main>
+      <!-- Example job vacancy listings using Bootstrap classes -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="vacancy mb-3 border p-3">
+              <div class="row">
+                <div class="col-md-2">
+                  <img
+                    class="company-logo"
+                    src="company1.png"
+                    alt="Company Logo"
+                  />
+                </div>
+                <div class="col-md-6">
+                  <h3 class="job-title">Job Title 1</h3>
+                  <div class="row">
+                    <div class="col-md-4">
+                      <p>
+                        <i class="fas fa-building"></i> Company: Company Name
+                      </p>
+                    </div>
+                    <div class="col-md-4">
+                      <p>
+                        <i class="fas fa-map-marker"></i> Location: New York
+                      </p>
+                    </div>
+                    <div class="col-md-4">
+                      <p><i class="fas fa-calendar"></i> Expires: 2023-11-15</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <p class="full-time">
+                    <i class="fas fa-clock"></i> Full-time
+                  </p>
+                  <p><i class="fas fa-calendar"></i> Start Date: 2023-12-01</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-12">
+            <div class="vacancy mb-3 border p-3">
+              <div class="row">
+                <div class="col-md-2">
+                  <img
+                    class="company-logo"
+                    src="company2.png"
+                    alt="Company Logo"
+                  />
+                </div>
+                <div class="col-md-6">
+                  <h3 class="job-title">Job Title 2</h3>
+                  <div class="row">
+                    <div class="col-md-4">
+                      <p>
+                        <i class="fas fa-building"></i> Company: Company Name
+                      </p>
+                    </div>
+                    <div class="col-md-4">
+                      <p>
+                        <i class="fas fa-map-marker"></i> Location: San
+                        Francisco
+                      </p>
+                    </div>
+                    <div class="col-md-4">
+                      <p><i class="fas fa-calendar"></i> Expires: 2023-11-30</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <p class="full-time">
+                    <i class="fas fa-clock"></i> Part-time
+                  </p>
+                  <p><i class="fas fa-calendar"></i> Start Date: 2023-11-15</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-
-        <div class="container vacancy-search">
-          <div class="container mt-3 row col-md-4">
-            <form class="">
-              <div class="form-group">
-                <label for="options">Şirkət seçin:</label>
-                <select class="form-control-sm" id="options" name="options">
-                  <option value="Option 1">Şirkət 1</option>
-                  <option value="Option 2">Şirkət 2</option>
-                  <option value="Option 3">Şirkət 3</option>
-                </select>
-              </div>
-              <!-- Optionlara foreach vermelisen ki tekce onlar bazadan gelib artsin umumi dive dovr verib hoqqa cixartma -->
-              <div class="form-group">
-                <label for="options">Şəhər seçin:</label>
-                <select class="form-control-sm" id="options" name="options">
-                  <option value="Option 1">Şəhər 1</option>
-                  <option value="Option 2">Şəhər 2</option>
-                  <option value="Option 3">Şəhər 3</option>
-                </select>
-              </div>
-              <button type="submit" class="btn btn-primary">Axtarış</button>
-            </form>
-          </div>
-
-        </div>
-
       </div>
+    </main>
+    <!-- Main End -->
 
+    <!-- Footer -->
+    <div class="footer">
+      <div class="col-md-4">
+        <div class="container-sm"><img src="/images/logo.png" alt="" /></div>
+      </div>
+      <div class="col-md-4"></div>
+      <div class="col-md-4"></div>
     </div>
-
-  </main>
-  <!-- Main End -->
-
-  <!-- Footer -->
-  <div class="footer">
-    <div class="col-md-4">
-      <div class="container-sm"><img src="/images/logo.png" alt=""></div>
+    <div class="footer-border row">
+      <div class="col-md-4 left-p">
+        <p>Copyright © 2023</p>
+      </div>
+      <div class="col-md-4 right-p">
+        <p>CV-Land</p>
+      </div>
     </div>
-    <div class="col-md-4">
-    </div>
-    <div class="col-md-4">
-    </div>
-
-  </div>
-  <div class="footer-border row">
-    <div class="col-md-4 left-p">
-      <p>Copyright © 2023</p>
-    </div>
-    <div class="col-md-4 right-p">
-      <p>CV-Land</p>
-    </div>
-  </div>
-  <!-- Footer End -->
-
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  <script src="/js/main.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-    crossorigin="anonymous"></script>
-</body>
-
+    <!-- Footer End -->
+    <!-- Include Bootstrap JS and Font Awesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
