Have to make it responsive

--- a/vacancy.html
+++ b/vacancy.html
@@ -86,25 +86,23 @@
                   <h3 class="job-title">Job Title 1</h3>
                   <div class="row">
                     <div class="col-md-4">
-                      <p>
-                        <i class="fas fa-building"></i> Company: Company Name
-                      </p>
+                      <p><i class="fas fa-building"></i> Company Name</p>
                     </div>
                     <div class="col-md-4">
-                      <p>
-                        <i class="fas fa-map-marker"></i> Location: New York
-                      </p>
+                      <p><i class="fas fa-map-marker"></i> New York</p>
                     </div>
                     <div class="col-md-4">
-                      <p><i class="fas fa-calendar"></i> Expires: 2023-11-15</p>
+                      <p><i class="fas fa-calendar"></i> Son gün: 2023-11-15</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <p class="full-time">
-                    <i class="fas fa-clock"></i> Full-time
-                  </p>
-                  <p><i class="fas fa-calendar"></i> Start Date: 2023-12-01</p>
+                  <div class="" style="width: 33%; float: right">
+                    <p class="full-time">
+                      <i class="fas fa-clock"></i> Full-time
+                    </p>
+                    <p><i class="fas fa-calendar"></i> 2023-12-01</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -123,26 +121,23 @@
                   <h3 class="job-title">Job Title 2</h3>
                   <div class="row">
                     <div class="col-md-4">
-                      <p>
-                        <i class="fas fa-building"></i> Company: Company Name
-                      </p>
+                      <p><i class="fas fa-building"></i> Company Name</p>
                     </div>
                     <div class="col-md-4">
-                      <p>
-                        <i class="fas fa-map-marker"></i> Location: San
-                        Francisco
-                      </p>
+                      <p><i class="fas fa-map-marker"></i> San Francisco</p>
                     </div>
                     <div class="col-md-4">
-                      <p><i class="fas fa-calendar"></i> Expires: 2023-11-30</p>
+                      <p><i class="fas fa-calendar"></i> Son gün: 2023-11-30</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <p class="full-time">
-                    <i class="fas fa-clock"></i> Part-time
-                  </p>
-                  <p><i class="fas fa-calendar"></i> Start Date: 2023-11-15</p>
+                  <div style="width: 33%; float: right">
+                    <p class="full-time">
+                      <i class="fas fa-clock"></i> Part-time
+                    </p>
+                    <p><i class="fas fa-calendar"></i> 2023-11-15</p>
+                  </div>
                 </div>
               </div>
             </div>
