--- a/vacancy.html
+++ b/vacancy.html
@@ -97,7 +97,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div class="" style="width: 33%; float: right">
+                  <div class="floating-div" style="width: 33%; float: right">
                     <p class="full-time">
                       <i class="fas fa-clock"></i> Full-time
                     </p>
@@ -132,7 +132,7 @@
                   </div>
                 </div>
                 <div class="col-md-4">
-                  <div style="width: 33%; float: right">
+                  <div class="floating-div" style="width: 33%; float: right">
                     <p class="full-time">
                       <i class="fas fa-clock"></i> Part-time
                     </p>
