--- a/vacancy.html
+++ b/vacancy.html
@@ -75,14 +75,14 @@
           <div class="col-md-12">
             <div class="vacancy mb-3 border p-3">
               <div class="row">
-                <div class="col-md-2">
-                  <img
+                <div class="col-md-2 vacancy-mobile">
+                  <img style="max-width: 80px; max-height: 80px;"
                     class="company-logo"
-                    src="company1.png"
+                    src="/images/company_logo.png"
                     alt="Company Logo"
                   />
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 vacancy-mobile-2">
                   <h3 class="job-title">Job Title 1</h3>
                   <div class="row">
                     <div class="col-md-4">
@@ -111,9 +111,9 @@
             <div class="vacancy mb-3 border p-3">
               <div class="row">
                 <div class="col-md-2">
-                  <img
+                  <img style="max-width: 80px; max-height: 80px;"
                     class="company-logo"
-                    src="company2.png"
+                    src="/images/company_logo.png"
                     alt="Company Logo"
                   />
                 </div>
@@ -168,7 +168,7 @@
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="/js/main.js"></script>
